src/01-app/03-app3/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-monitor-app3-ns
  labels:
    name: g-monitor-app3-ns
    app: g-monitor-app3-app
    project: g-monitor-project
