src/01-app/03-app3/02-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: g-monitor-app3-deployment
  namespace: g-monitor-app3-ns
  labels:
    name: g-monitor-app3-deployment
    app: g-monitor-app3-app
    project: g-monitor-project
spec:
  replicas: 2
  selector:
    matchLabels:
      name: g-monitor-app3-deployment
      app: g-monitor-app3-app
      project: g-monitor-project
  template:
    metadata:
      labels:
        name: g-monitor-app3-deployment
        app: g-monitor-app3-app
        project: g-monitor-project
    spec:
      containers:
        - name: main-container
          image: gandhicloud/g-app-store
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
