src/01-app/03-app3/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-monitor-app3-service
  namespace: g-monitor-app3-ns
  labels:
    name: g-monitor-app3-service
    app: g-monitor-app3-app
    project: g-monitor-project
spec:
  ports:
    - name: main-container
      port: 8080
      targetPort: 8080
  selector:
    name: g-monitor-app3-deployment
